--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="shortcut icon"
       href="
-      /assets/favicon-32x32.png"
+      ./assets/favicon-32x32.png"
       type="image/x-icon"
     />
     <title>Social Links</title>
@@ -17,7 +17,7 @@
 <body>
     <main>
         <section>
-            <img src="/assets/avatar-jessica.jpeg.jpg" alt="Jessica">
+            <img src="./assets/avatar-jessica.jpeg.jpg" alt="Jessica">
         </section>
         <section>
             <h2>Jessica Randall</h2>
